<resources>
    <string name="app_name">Peliculas</string>
    <string name="action_settings">Settings</string>
    <string name="aniadirPelicula">Añadir Pelicula</string>
    <string name="acercaDe">Acerca De</string>
    <string name="lblTitulo">Título</string>
    <string name="lblAnio">Año</string>
    <string name="lblDuracion">Duración</string>
    <string name="lblDireccion">Dirección</string>
    <string name="lblGenero">Género</string>
    <string name="lblSinopsis">Sinopsis</string>
    <string name="btnEntrar">Entrar</string>
    <string name="verPelicula">Ver Pelicula</string>
    <string name="borrarPelicula">Borrar Pelicula</string>
    <string name="btnGuardar">Guardar</string>
</resources>
